remove fixed height for full-bleed-image section

--- a/_sass/page-section__full-bleed-image.scss
+++ b/_sass/page-section__full-bleed-image.scss
@@ -3,7 +3,7 @@
 	background-position: center center; 
 	padding: 96px 0;
 
-	height: 600px;
+	// height: 600px;
 
 
 	@include phone{
